--- a/style3.css
+++ b/style3.css
@@ -2,17 +2,17 @@
 	margin: 0;
 	padding: 0;
 }
-img {
-	width: 100%;
-	height: auto;
-	display: block;
+.mockupssall img {
+	width: 100% !important;
+	height: auto !important;
+	display: block !important;
 }
-.container {
+.mockupssall {
 	max-width: 600p;
 	margin: 0 auto;
 }
 /*Page 1*/
-.wrapper {
+.mockupssall .wrapper {
     position: relative;
     /* min-height: 100vh; */
     background-color: rgba(234, 233, 230, 0.35);
