--- a/style3.css
+++ b/style3.css
@@ -3,9 +3,9 @@
 	padding: 0;
 }
 .mockupssall img {
-	width: 100% !important;
-	height: auto !important;
-	display: block !important;
+	width: 100%;
+	height: auto;
+	display: block;
 }
 .mockupssall {
 	max-width: 600p;
