--- a/style3.css
+++ b/style3.css
@@ -138,12 +138,13 @@
     max-width: 100% !important;
     /* width: 104%; */
     margin: 0 auto;
-    background: url(Image_8_2.png) 0 0 no-repeat;
+    background: url(Image_8_2_old1.png) 0 0 no-repeat;
     overflow: hidden;
     background-size: 104% auto;
     position: relative;
     height: 100% !important;
-    opacity: .9;
+   /* opacity: .9; */
+    opacity:1;
     left: 0;
     right: 0;
 }
