--- a/style3.css
+++ b/style3.css
@@ -32,9 +32,9 @@
 .main-img {
     position: absolute;
     top: 0.5%;
-    left: 0%;
+    left: 1%;
     width: 100% !important;
-    height: 100% !important;
+    height: 99% !important;
   /*  clip-path: polygon(5.5% 3.4%, 15% 6%, 6% 4%, 6% 4%, 6% 4%, 12% 5%, 11% 5%, 11% 5%, 13% 7%, 11% 5%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 95.8% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 35%, 95% 35%, 95% 35%, 95% 35%, 96% 15%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 95% 66%, 95% 66%, 95% 66%, 96% 43%, 95.8% 66%, 95.8% 76%, 95% 76%, 95% 76%, 95% 76%, 95% 76%, 95% 81%, 95% 81%, 95% 81%, 95% 81%, 95% 81%, 95% 92%, 95% 89%, 95% 89%, 95% 56%, 95.6% 89%, 95.5% 95%, 95% 95%, 95% 95%, 95% 95%, 95% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 15% 95%, 15% 95%, 14% 95%, 14% 95%, 5% 94%, 27% 40%, 19% 94%, 5% 95%, 17% 94%, 13% 95%, 5% 94.6%, 5% 94%, 6% 94%, 1% 94%, 5% 94%, 5% 88%, 5% 87%, 5% 87%, 5% 87%, 5% 87%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 7% 13%, 7% 49%, 7% 49%, 7% 49%, 7% 49%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 6% 24%, 6% 24%, 6% 23%, 6% 24%, 6% 24%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 12%, 6% 12%, 6% 12%, 6% 12%, 6% 12%); */
       clip-path: polygon(5.5% 3.4%, 15% 6%, 6% 4%, 6% 4%, 6% 4%, 12% 5%, 11% 5%, 11% 5%, 13% 7%, 11% 5%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 95.8% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 35%, 95% 35%, 95% 35%, 94% 34%, 96% 13%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 96% 59%, 95% 66%, 95% 66%, 95% 66%, 96% 43%, 95.8% 66%, 95.8% 76%, 95% 76%, 95% 76%, 94% 76%, 96% 73%, 94% 94%, 95% 81%, 96% 81%, 95% 81%, 95% 81%, 95% 92%, 95% 89%, 95% 85%, 96% 56%, 95.6% 89%, 95.5% 95%, 95% 95%, 95% 95%, 95% 95%, 95% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 15% 95%, 15% 95%, 14% 95%, 14% 95%, 5% 94%, 27% 40%, 19% 94%, 5% 95%, 17% 94%, 13% 95%, 5% 94.6%, 5% 94%, 6% 94%, 1% 94%, 5% 94%, 5% 88%, 5% 87%, 5% 87%, 5% 87%, 5% 87%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 7% 13%, 7% 49%, 7% 49%, 7% 49%, 7% 49%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 7% 36%, 6% 24%, 6% 23%, 6% 24%, 6% 24%, 6% 24%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 12%, 6% 12%, 6% 12%, 6% 12%, 6% 12%);
 }
@@ -46,13 +46,15 @@
     top: -0.1%;
 }
 .image-container {
-    height: 100% !important;
+   height: 100% !important;
     width: 56% !important;
     position: relative;
     margin: 0 auto;
     background: url(shadow.png) 0 0 no-repeat;
-    background-size: 101.5% 102.2%;
+    background-size: 101.5% 100.2%;
     top: 1%;
+    /* box-shadow: 0px 1px 5px #4a4a4a; */
+    filter: drop-shadow(1px 2px 2px #4a4a4a);
 }
 
 
@@ -297,14 +299,15 @@ clip-path:polygon(9% 12%, 13% 13%, 14% 13%, 14% 13%, 17% 13%, 11% 13%, 23% 14%, 
     position: relative;
     margin: 0 auto;
     background: url(shadow.png) 0 0 no-repeat;
-    background-size: 101.8% 101.8%;
+    background-size: 101.8% 99.8%;
     top: 1%;
+    filter: drop-shadow(1px 2px 2px #4a4a4a);
 }
 
 .shadow-img_bed_front {
-    position: absolute;
+   position: absolute;
     width: 101% !important;
-    height: 103% !important;
+    height: 102% !important;
     opacity: .4;
     top: -1.1%;
 }
@@ -312,7 +315,7 @@ clip-path:polygon(9% 12%, 13% 13%, 14% 13%, 14% 13%, 17% 13%, 11% 13%, 23% 14%, 
 .main-img_bed_front {
     position: relative;
     top: 0.5%;
-    left: 0%;
+    left: 1%;
     width: 100% !important;
 	height::100% !important;
    /* clip-path: polygon(5.5% 3.4%, 15% 6%, 6% 4%, 6% 4%, 6% 4%, 12% 5%, 11% 5%, 11% 5%, 13% 7%, 11% 5%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 95.8% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 35%, 95% 35%, 95% 35%, 95% 35%, 96% 15%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 95% 66%, 95% 66%, 95% 66%, 96% 43%, 95.8% 66%, 95.8% 76%, 95% 76%, 95% 76%, 95% 76%, 95% 76%, 95% 81%, 95% 81%, 95% 81%, 95% 81%, 95% 81%, 95% 92%, 95% 89%, 95% 89%, 95% 56%, 95.6% 89%, 95.5% 95%, 95% 95%, 95% 95%, 95% 95%, 95% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 15% 95%, 15% 95%, 14% 95%, 14% 95%, 5% 94%, 27% 40%, 19% 94%, 5% 95%, 17% 94%, 13% 95%, 5% 94.6%, 5% 94%, 6% 94%, 1% 94%, 5% 94%, 5% 88%, 5% 87%, 5% 87%, 5% 87%, 5% 87%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 7% 13%, 7% 49%, 7% 49%, 7% 49%, 7% 49%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 6% 24%, 6% 24%, 6% 23%, 6% 24%, 6% 24%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 12%, 6% 12%, 6% 12%, 6% 12%, 6% 12%); */
@@ -329,8 +332,9 @@ clip-path:polygon(9% 12%, 13% 13%, 14% 13%, 14% 13%, 17% 13%, 11% 13%, 23% 14%, 
     position: relative;
     margin: 0 auto;
     background: url(shadow.png) 0 0 no-repeat;
-    background-size: 101.5% 101.5%;
+    background-size: 101.5% 99.5%;
     top: 1%;
+    filter: drop-shadow(1px 2px 2px #4a4a4a);
 }
 
 .shadow-img_front_three {
@@ -345,7 +349,7 @@ clip-path:polygon(9% 12%, 13% 13%, 14% 13%, 14% 13%, 17% 13%, 11% 13%, 23% 14%, 
 .main-img_front_three {
     position: relative;
     top: 0.5%;
-    left: 0%;
+    left: 1%;
     width: 100% !important;
 	height::100% !important;
    /* clip-path: polygon(5.5% 3.4%, 15% 6%, 6% 4%, 6% 4%, 6% 4%, 12% 5%, 11% 5%, 11% 5%, 13% 7%, 11% 5%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 19% 6%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 29% 7%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 38% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 48% 8%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 57% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 65% 7%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 74% 6%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 82% 5%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 91% 4%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 97% 3%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 13%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 96% 18%, 95.8% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 27%, 95% 35%, 95% 35%, 95% 35%, 95% 35%, 96% 15%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 45%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 50%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 96% 57%, 95% 66%, 95% 66%, 95% 66%, 96% 43%, 95.8% 66%, 95.8% 76%, 95% 76%, 95% 76%, 95% 76%, 95% 76%, 95% 81%, 95% 81%, 95% 81%, 95% 81%, 95% 81%, 95% 92%, 95% 89%, 95% 89%, 95% 56%, 95.6% 89%, 95.5% 95%, 95% 95%, 95% 95%, 95% 95%, 95% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 88% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 85% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 75% 95%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 65% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 56% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 46% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 36% 96%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 28% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 20% 95%, 15% 95%, 15% 95%, 14% 95%, 14% 95%, 5% 94%, 27% 40%, 19% 94%, 5% 95%, 17% 94%, 13% 95%, 5% 94.6%, 5% 94%, 6% 94%, 1% 94%, 5% 94%, 5% 88%, 5% 87%, 5% 87%, 5% 87%, 5% 87%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 84%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 5% 78%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 68%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 6% 60%, 7% 13%, 7% 49%, 7% 49%, 7% 49%, 7% 49%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 39%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 7% 29%, 6% 24%, 6% 24%, 6% 23%, 6% 24%, 6% 24%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 19%, 6% 12%, 6% 12%, 6% 12%, 6% 12%, 6% 12%); */
