--- a/style3.css
+++ b/style3.css
@@ -194,8 +194,9 @@ clip-path: polygon(0.7% 0%, 2% 5%, 30% 100%, 31% 102%, 36% 101%, 32% 101%, 35% 9
     background: url(shadow-skewed-left.png) -8% 9% no-repeat;
     /* transform: rotate(-1deg); */
     /* background-size: 87% 85%; */
-    background-size: 94% 88%;
+    background-size: 94% 87%;
     /*transform: rotate(-1deg);*/
+    filter: drop-shadow(0px 2px 1px #4a4a4a);
 }
 .image-container-bed .main-img3 {
 	height: 100% !important;
