--- a/style3.css
+++ b/style3.css
@@ -135,8 +135,22 @@
     box-shadow: 0 -3px 7px #000000;
     left: 73px;
 }
+
+.image-container-fold:before {
+   height: 8px;
+    content: '';
+    width: 112%;
+    position: absolute;
+    transform: rotate(26deg);
+    /* top: 105px; */
+    background: #35353500;
+    box-shadow: 0px -13px 14px #000000;
+    left: -31px;
+    top: 50%;
+	}
+	
 .shadow-img-curve {
-	opacity: .6;
+	opacity: .8;
 }
 /*Page 3*/
 .image-container-fold-two {
