--- a/style3.css
+++ b/style3.css
@@ -125,14 +125,14 @@
 
 
 .image-container-fold:after {
-   height: 20px;
+  height: 18px;
     content: '';
     width: 100%;
     position: absolute;
     transform: rotate(22deg);
     top: 7%;
-    background: #00000005;
-    box-shadow: 0px 20px 25px #000000;
+    background: #00000000;
+    box-shadow: 0px 26px 20px #000000cc;
     left: 16%;
 }
 
